--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🏥 Examen Blanco MIR</h1>
+            <h1>🏥 Examen Blanco MIR para Claudia</h1>
             <p>Médico Interno Residente - Simulacro</p>
         </div>
 
