--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ class Exam {
 
 async function init() {
     try {
-        const res = await fetch('batch1.json');
+        const res = await fetch('batch.json');
         if(!res.ok) throw new Error('No se pudo cargar batch1.json (I must be doing an update now)');
         const data = await res.json();
         new Exam(data);
